# raytracer

./: CMakeLists.txt  README.md  Rakefile  test_scene.txt
docopt/: CMakeLists.txt
docs/: index.html  main.css
models/: blanket.py  bunny_obj.txt  obj2scene.py
scenes/: adj_tri.txt  blanket.txt  bunny.txt  cube.scene  flattriangle.txt  journal_reflection.txt  mirror.txt  moon.txt  phong.txt  refl.txt  teapot.txt  tri.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Geometry.cpp  Geometry.h  Intersection.h  Light.cpp  Light.h  Material.h  Matrix.cpp  Matrix.h  Profiler.cpp  Profiler.h  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Triangle.h  Vector.cpp  Vector.h  main.cpp  test.cpp
